versioned_docs/version-3.0.0/install-next.mdx
---
id: install-next
title: Install in NextJS project
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import { TileLink } from '../src/components';

  <Tabs
  defaultValue='expo'
  values={[
  { label: 'Using Expo NextJS template (recommended)', value: 'expo' },
  { label: 'Using NextJS CLI', value: 'next' }
  ]}>

  <TabItem value="expo">

### Create a new project using Expo NextJS template

```bash
npx create-react-native-app -t with-nextjs
```

[Refer official guide](https://docs.expo.io/guides/using-nextjs/) if you need additional configurations.

### Install dependencies

  <Tabs
  defaultValue='yarn'
  values={[
  { label: 'yarn', value: 'yarn' },
  { label: 'npm', value: 'npm' }
  ]}>

  <TabItem value="yarn">

```bash
yarn add native-base@next react-native-svg styled-components styled-system react-native-safe-area-context
```

  </TabItem>

  <TabItem value="npm">

```bash
npm install native-base@next react-native-svg styled-components styled-system react-native-safe-area-context
```

  </TabItem>

  </Tabs>

  </TabItem>

  <TabItem value="next">

### Create a new project using NextJS CLI with react native web template

```bash
npx create-next-app --example with-react-native-web with-react-native-web-app
```

[Refer official guide](https://necolas.github.io/react-native-web/docs/installation/) if you need additional configurations.

### Install dependencies

  <Tabs
  defaultValue='yarn'
  values={[
  { label: 'yarn', value: 'yarn' },
  { label: 'npm', value: 'npm' }
  ]}>

  <TabItem value="yarn">

```bash
yarn add native-base@next react-native-svg styled-components styled-system react-native-safe-area-context
```

  </TabItem>

  <TabItem value="npm">

```bash
npm install native-base@next react-native-svg styled-components styled-system react-native-safe-area-context
```

  </TabItem>

  </Tabs>

We'll need 2 more additional steps.

1. Install dependencies.

```bash
  // Using npm
  npm i next-compose-plugins next-transpile-modules --save-dev

  // Using yarn
  yarn add next-compose-plugins next-transpile-modules -D
```

2. Replace next.config.js with the below content.

```js
const withPlugins = require('next-compose-plugins');
const withTM = require('next-transpile-modules')([
  'native-base',
  'react-native-svg',
  'styled-components',
  'react-native-safe-area-context',
  '@react-aria/visually-hidden',
  '@react-native-aria/button',
  '@react-native-aria/checkbox',
  '@react-native-aria/combobox',
  '@react-native-aria/focus',
  '@react-native-aria/interactions',
  '@react-native-aria/listbox',
  '@react-native-aria/overlays',
  '@react-native-aria/radio',
  '@react-native-aria/slider',
  '@react-native-aria/tabs',
  '@react-native-aria/utils',
  '@react-stately/combobox',
  '@react-stately/radio',
]);

module.exports = withPlugins([withTM], {
  webpack: (config) => {
    config.resolve.alias = {
      ...(config.resolve.alias || {}),
      // Transform all direct `react-native` imports to `react-native-web`
      'react-native$': 'react-native-web',
    };
    config.resolve.extensions = [
      '.web.js',
      '.web.ts',
      '.web.tsx',
      ...config.resolve.extensions,
    ];
    return config;
  },
});
```

  </TabItem>

  </Tabs>

### Run the Hello world example

Put the below code in your App.js

```jsx
import React from 'react';
import { NativeBaseProvider, Box } from 'native-base';

export default function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```

<div style={{ textAlign: 'center' }}>
  <img src="/img/minion.gif" />
</div>

<div className="tailwind">
  <div className="mt-4 mb-8">
    <div className="row pl-0 ml-0">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </div>
    <div className="row mt-2 pl-0 ml-0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </div>
  </div>
</div>
